Fix build and test github action: add env variables

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,6 +9,12 @@ on:
   pull_request:
     branches: [ "*" ]
 
+env:
+  SERVER_ADDRESS: "0.0.0.0:50051"
+  ADMIN_USERNAME: "admin"
+  ADMIN_EMAIL: "admin@admin.com"
+  ADMIN_PASSWORD: "admin"
+
 jobs:
 
   build:
